# algo_reasoning_env

./: .gitignore  Dockerfile  README.md  app.py  inference.py  main.py  openenv.yaml  phase4_executor.py  pyproject.toml  requirements.txt  validate-submission.sh
algo_reasoning_env/: README.md  __init__.py  compiler.py  data_loader.py  environment.py  models.py  openenv.yaml  pyproject.toml  rubric.py
algo_reasoning_env/server/: Dockerfile  __init__.py  app.py  session_store.py
complexity_reasoning_data/: comparing.ipynb  dataset.jsonl  explanations.json  extract_explanations.py  extract_starter_code.ipynb  extract_tests.ipynb  hf_question_ids.json  python_tests.jsonl  starter_codes.jsonl  test_harness.jsonl
pipeline/: __init__.py  assembler.py  category_resolver.py  code_generator.py  config.py  executor.py  import_rust_starter.py  llm_judge.py  logger.py  problem.py  regenerate_test_harnesses.py  run_pipeline.py  test_harness_converter.py
pipeline/boilerplate/: __init__.py  custom.rs  graph.rs  heap.rs  linked_list.rs  pure.rs  registry.py  tree.rs
server/: __init__.py  app.py
