[project]
name = "rust-dataset"
version = "0.1.0"
description = "Algo Reasoning Environment - OpenEnv benchmark for Rust LeetCode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "openenv-core",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "algo-reasoning-env",
]

[project.scripts]
server = "algo_reasoning_env.server.app:main"

[tool.uv.sources]
openenv-core = { git = "https://github.com/meta-pytorch/OpenEnv.git" }
algo-reasoning-env = { path = "algo_reasoning_env" }
